--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
                 default: 'arcade',
                 arcade: {
                     gravity: { y: 300 },
-                    debug: true
+                    debug: false
                 }},
                 input:{gamepad:true},
                 scene: {preload: preload, create: create, update: update }
